cfn.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Flask uygulamasi ile instance ayaga kaldirma
Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
  KeyName:
    Description: choose your Key Pair
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  Webserver:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroupIds: 
        - !Ref MySecGrp
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: !Base64 |
        #!/bin/bash
        
        yum update -y
        yum install python3 -y
        yum install python3-pip -y
        pip3 install flask
        yum install git -y
        cd /home/ec2-user
        wget -P templates https://raw.githubusercontent.com/q5211murat/romen-number-convert/main/templates/index.html
        wget -P templates https://raw.githubusercontent.com/q5211murat/romen-number-convert/main/templates/result.html
        wget https://raw.githubusercontent.com/q5211murat/romen-number-convert/main/roman-numerals-converter-app.py
        python3 roman-numerals-converter-app.py
        
  

  MySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Ssh Http # Required
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0


Outputs:
  DnsName:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt Webserver.PublicDnsName
